# oas-image-viewer

./: .clippy.toml  .gitignore  CHANGELOG.md  CLEAN_ARCH_REFACTOR_REPORT.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  config.example.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
assets/duti-mac/: README.md
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  BUILD.md  COPY_SHORTCUT_MATRIX.md  DEVELOPMENT.md  PRD.md  STANDARDS.md  TEST_PLAN.md  UI_SPEC.md  USAGE.md
install/: INSTALL.md
install/linux/: image-viewer.desktop  install.sh  uninstall.sh
install/macos/: Info.plist  install.sh
install/windows/: README.md  install.bat  register-context-menu-win10-win11.reg  register-context-menu.bat  register-context-menu.reg  unregister-context-menu.reg
locales/: en-US.json  zh-CN.json
macos/: Info.plist  entitlements.plist
packaging/: oas-image-viewer.desktop
scripts/: generate_changelog.py
src/: clipboard.rs  config.rs  info_panel.rs  lib.rs  main.rs  shortcuts_help.rs
src/adapters/: clipboard.rs  macos_file_open.rs  mod.rs
src/adapters/egui/: app.rs  i18n.rs  info_panel.rs  mod.rs  shortcut_labels.rs  shortcuts_help.rs  thumbnail_loader.rs
src/adapters/egui/app/: copy_shortcuts.rs  handlers.rs  lifecycle.rs  menu.rs  render.rs  shortcuts.rs  slideshow.rs  state_sync.rs  transform.rs  types.rs  utils.rs
src/adapters/egui/app/menu/: integration.rs  menu_file.rs  menu_help.rs  menu_image.rs  menu_specs.rs  menu_view.rs  popup.rs  sections.rs  style.rs
src/adapters/egui/info_panel/: helpers.rs  metadata.rs  receiver.rs  tests.rs
src/adapters/egui/widgets/: gallery_widget.rs  mod.rs  viewer_widget.rs
src/adapters/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/adapters/system_integration/: platform.rs
src/adapters/system_integration/platform/: fallback.rs  linux.rs  macos.rs  windows.rs
src/app/: mod.rs
src/clipboard/: mod.rs
src/core/: mod.rs
src/core/domain/: editing.rs  errors.rs  image.rs  language.rs  mod.rs  types.rs
src/core/ports/: mod.rs
src/core/use_cases/: batch.rs  config.rs  edit.rs  mod.rs  navigate.rs  service.rs  state.rs  view.rs
src/core/use_cases/service/: batch.rs  config.rs  edit.rs  gallery.rs  lifecycle.rs  ui_state.rs  viewer.rs
src/decoder/: mod.rs
src/dnd/: mod.rs
src/gallery/: mod.rs
src/infrastructure/: async_image_source.rs  batch_port.rs  file_dialog.rs  fs_image_source.rs  image_decoder.rs  image_export.rs  mod.rs  storage.rs  tests.rs
src/utils/: errors.rs  mod.rs  threading.rs
src/viewer/: mod.rs
tests/: decoder_test.rs  dnd_integration_test.rs  dnd_more_test.rs
windows/: manifest.xml
wix/: main.wxs
