[package]
name = "image-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern image viewer built with Rust and egui"
license = "MIT"
repository = "https://github.com/yourusername/image-viewer"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "multimedia::images"]
rust-version = "1.93"

[dependencies]
# GUI framework
eframe = { version = "0.24", features = ["default"] }
egui = "0.24"

# Image decoding
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "tiff",
    "bmp",
] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# System directories
directories = "5.0"

# File dialogs - use default backend selection
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }

# Font support for CJK characters
font-kit = "0.11"

# Utility
parking_lot = "0.12"
rayon = "1.8"
# EXIF metadata reading
kamadak-exif = "0.5"
chrono = "0.4"
# Clipboard support
arboard = "3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[dev-dependencies]
# Testing
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true
