[package]
name = "oas-image-viewer"
version = "0.3.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern image viewer built with Rust and egui"
license = "MIT"
repository = "https://github.com/openappsys/oas-image-viewer"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "multimedia::images"]
rust-version = "1.93"

[dependencies]
# GUI framework
eframe = { version = "0.33", features = ["default"] }
egui = "0.33"

# Image decoding
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "tiff",
    "bmp",
] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# System directories
directories = "6.0"

# File dialogs - use default backend selection
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }

# Utility
parking_lot = "0.12"
rayon = "1.11"
# EXIF metadata reading
kamadak-exif = "0.6"
chrono = "0.4"
# Clipboard support
arboard = "3.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[dev-dependencies]
# Testing
tempfile = "3.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true

# 进一步优化包大小
[profile.release-minimal]
inherits = "release"
opt-level = "z"      # 优化大小而非速度
lto = "fat"          # 更激进的LTO
codegen-units = 1
strip = true
panic = "abort"      # 移除panic处理代码
